--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "firebase": "^11.3.1",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
+    "motion": "^12.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.17.2",
